# lexicographic_planning

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/: utility.h
include/planner/: lex_planner.h  rollout_generator.h
launch/: run.launch
launch/include/: move_base.launch  rviz.rviz  test.world  world.launch
launch/params/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
launch/params/move_base/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/: cloudRegister.cpp  obstacleServer.cpp  pathPlanning.cpp  pathServer.cpp
